--- a/api/rest-java-server/pom.xml
+++ b/api/rest-java-server/pom.xml
@@ -118,6 +118,49 @@
                     </configOptions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>osixia/openldap:1.3.0</name>
+                            <alias>openldap</alias>
+                            <run>
+                                <env>
+                                    <LDAP_ORGANISATION>Example Inc.</LDAP_ORGANISATION>
+                                    <LDAP_DOMAIN>example.org</LDAP_DOMAIN>
+                                    <LDAP_READONLY_USER>true</LDAP_READONLY_USER>
+                                    <LDAP_ADMIN_PASSWORD>adminPass</LDAP_ADMIN_PASSWORD>
+                                    <LDAP_CONFIG_PASSWORD>configPass</LDAP_CONFIG_PASSWORD>
+                                    <LDAP_READONLY_USER_USERNAME>readonly</LDAP_READONLY_USER_USERNAME>
+                                    <LDAP_READONLY_USER_PASSWORD>readonlyPass</LDAP_READONLY_USER_PASSWORD>
+                                </env>
+                                <ports>
+                                    <port>389:389</port>
+                                    <port>636:636</port>
+                                </ports>
+                                <volumes>
+                                    <bind>
+                                        <volume>src/test/resources/ldap/account.ldif:/tmp/account.ldif:Z</volume>
+                                        <volume>src/test/resources/ldap/create.sh:/tmp/create.sh:Z</volume>
+                                    </bind>
+                                </volumes>
+                                <wait>
+                                    <tcp>
+                                        <ports>
+                                            <port>389</port>
+                                        </ports>
+                                    </tcp>
+                                    <exec>
+                                        <postStart>bash /tmp/create.sh</postStart>
+                                    </exec>
+                                </wait>
+                            </run>
+                        </image>
+                    </images>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
